--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,12 @@
     @apply mt-8 space-y-4;
   }
 }
+
+.long-shadow {
+  box-shadow:
+    rgba(0, 0, 0, 0.12) 0px 0px 1px,
+    rgba(0, 0, 0, 0.03) 0px 4px 2px,
+    rgba(0, 0, 0, 0.02) 0px 10px 6px,
+    rgba(0, 0, 0, 0.02) 0px 16px 8px,
+    rgba(0, 0, 0, 0.02) 0px 32px 20px;
+}
