feat: add TestChart

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,8 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
+    --chart-1: 0 0% 0%;
+    --chart-2: 0 84% 60%;
   }
 
   .dark {
@@ -46,6 +48,8 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
   }
 }
 
